--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,8 @@
+
+body {
+    background-color: #dce0e3;
+}
+
 /* Monopoly card adapted from: https://youtu.be/WCli_MR_j0U
 for use in bootstrap / responsive sizing */
 
